--- a/videoPage/style.css
+++ b/videoPage/style.css
@@ -1,12 +1,35 @@
-#videoElement {
-    border: 3px solid black;
-    background: grey;
+
+
+   #videoElement {
+    border: 4px solid black;
+    background-color: grey;
     width: 400px;
-    height: 300px
-   }
+    height: 300px;
+  }
 
    .container{
        display: flex;
        align-items: center;
        justify-content: center;
+       flex-direction: column;
    }
+
+   .buttons{
+       margin-top: 1%;
+   }
+
+
+   @media only screen and (min-width: 601px) {
+
+    #videoElement {
+        margin-top: -5%;
+        width: 66%;
+        height: 49%;
+        
+        
+    
+       }
+
+      
+
+  }
