--- a/videoPage/style.css
+++ b/videoPage/style.css
@@ -16,7 +16,25 @@
 
    .buttons{
        margin-top: 1%;
+       margin-left: 10%;
    }
+
+   .btn{
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+      
+   }
+
+   a, a:hover, a:focus, a:active{
+       text-decoration: none;
+       color: inherit
+   }
+   
+   
 
 
    @media only screen and (min-width: 601px) {
@@ -25,10 +43,12 @@
         margin-top: -5%;
         width: 66%;
         height: 49%;
-        
-        
     
        }
+
+    .buttons{
+        margin-left: 0;
+    }
 
       
 
