--- a/videoPage/style.css
+++ b/videoPage/style.css
@@ -19,7 +19,7 @@
        margin-left: 10%;
    }
 
-   .btn{
+   .videoButtons{
     width: 50px;
     height: 50px;
     padding: 10px 16px;
@@ -33,6 +33,13 @@
        text-decoration: none;
        color: inherit
    }
+
+   .topContainer{
+       display: flex;
+       justify-content: space-between;
+
+   }
+
    
    
 
