--- a/scheduler/css/demo.css
+++ b/scheduler/css/demo.css
@@ -1,9 +1,17 @@
 body {
 
-color: #40bae0;
-text-shadow: 0px 1px 1px #adadad;
-filter: dropshadow(color=#1b1b1b, offx=0, offy=1);
+color: #000000;
+background-color: rgb(250, 250, 250);
+
 }
+
+
+
+
+
+
+
+
 h1 { margin-top:150px; text-align:center;
 
 
