--- a/scheduler/scss/bootstrap/_card.scss
+++ b/scheduler/scss/bootstrap/_card.scss
@@ -10,7 +10,8 @@
   word-wrap: break-word;
   background-color: $card-bg;
   background-clip: border-box;
-  border: $card-border-width solid $card-border-color;
+  border: solid ;
+  
   @include border-radius($card-border-radius);
 
   > hr {
